--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,7 @@
 Thumbs.db
 desktop.ini
 #------------------ some files not ready
-#*.pptx
+*.pptx
 #------------------ directories to ignore
 temp/
 data/
