--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,7 @@
 .Spotlight-V100
 Thumbs.db
 desktop.ini
-#------------------ some files not ready
+#------------------ some files not ready or will not alter
 *.pptx
 #------------------ directories to ignore
 temp/
